--- a/markdown/src/main/res/layout/markdown_recyclerview.xml
+++ b/markdown/src/main/res/layout/markdown_recyclerview.xml
@@ -9,6 +9,7 @@
     android:id="@+id/recyclerview"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:nestedScrollingEnabled="false"
     app:layout_constrainedHeight="true"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
